@@ -901,7 +901,7 @@ a144344619878237f41ee3b1f6827a9f81799291 data/minecraft/recipes/nethersteel_nugg
 e3d412883828f984ded0bb488a177dfd6d3dabed data/minecraft/recipes/tracer_application.json
 41dcf64e24262c2b8d8c4a47a8f35d69bf26bbb0 data/minecraft/recipes/tracer_application_deployer.json
 05a581d816ec4a369b6ecc7120d48d8594dcfa28 data/minecraft/recipes/wrought_iron_drop_mortar_end_mirrored.json
-b81f0fbe150125e15cb1c7d814754b6bf7b585c9 data/minecraft/tags/blocks/mineable/axe.json
+7fa5065e32210f792d1daad2d7268247904f6252 data/minecraft/tags/blocks/mineable/axe.json
 693c77552826b3268aae1ea17c84ca6b0b8a357c data/minecraft/tags/blocks/mineable/pickaxe.json
 bb423629db5cdb85c080525ca5a1bceb324e0636 data/minecraft/tags/blocks/mineable/shovel.json
 b0923846a9033b5bd95649be4a821a4d399720bc data/minecraft/tags/blocks/needs_diamond_tool.json
